--- a/package.json
+++ b/package.json
@@ -31,11 +31,17 @@
     "@editorjs/underline": "^1.1.0",
     "@editorjs/warning": "^1.4.0",
     "@sotaproject/strikethrough": "^1.0.1",
+    "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "editorjs-text-color-plugin": "^2.0.3",
+    "json-server": "^1.0.0-alpha.23",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.1",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.22.0",
+    "react-tag-autocomplete": "^7.1.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.1",
