--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "api": "json-server --watch db.json --port 3000",
     "start": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -31,6 +32,8 @@
     "@editorjs/underline": "^1.1.0",
     "@editorjs/warning": "^1.4.0",
     "@sotaproject/strikethrough": "^1.0.1",
+    "@tanstack/react-query": "^5.18.1",
+    "@tanstack/react-query-devtools": "^5.18.1",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "editorjs-text-color-plugin": "^2.0.3",
@@ -39,7 +42,6 @@
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
-    "react-query": "^3.39.3",
     "react-router-dom": "^6.22.0",
     "react-tag-autocomplete": "^7.1.0"
   },
