--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "editorjs-text-color-plugin": "^2.0.3",
+    "guid-typescript": "^1.0.9",
     "json-server": "^1.0.0-alpha.23",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
