--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
-  "name": "tech-notes-app",
   "private": true,
+  "name": "tech-notes-app",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "api": "json-server --watch db.json --port 3000",
-    "start": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "format": "prettier --write src/**/*.{ts,tsx}",
-    "test": "vitest",
+    "build:lib": "tsc && vite build",
+    "build:clean": "rimraf dist",
+    "build": "run-s build:clean build:lib",
     "coverage": "vitest run --coverage",
-    "test:watch": "vitest --watch",
-    "test:ui": "vitest --ui"
+    "fix:code": "eslint --fix --quiet -c .eslintrc.cjs src",
+    "format": "prettier --write src/**/*.{ts,tsx}",
+    "format:check": "prettier --check src/**/*.{ts,tsx}",
+    "lint": "run-s lint:code lint:report",
+    "lint:code": "eslint --quiet -c .eslintrc.cjs src",
+    "lint:report": "eslint --format checkstyle --output-file eslintreport.xml -c .eslintrc.cjs src",
+    "prettier:package-json": "prettier-package-json --write ./package.json",
+    "preview": "vite preview",
+    "start": "vite",
+    "test": "vitest run",
+    "test:ui": "vitest --ui --open",
+    "test:watch": "vitest --watch"
   },
   "dependencies": {
     "@editorjs/checklist": "^1.6.0",
@@ -47,21 +54,29 @@
     "react-tag-autocomplete": "^7.1.0"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.20.1",
     "@testing-library/jest-dom": "^6.4.1",
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
     "@types/node": "^20.11.16",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "eslint-plugin-simple-import-sort": "^12.0.0",
     "jsdom": "^24.0.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "3.2.4",
+    "prettier-package-json": "^2.8.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
     "vitest": "^1.2.2"
