--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@tanstack/react-query-devtools": "^5.18.1",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "editorjs-paragraph-with-alignment": "^3.0.0",
     "editorjs-text-color-plugin": "^2.0.3",
     "guid-typescript": "^1.0.9",
     "json-server": "^1.0.0-alpha.23",
